Fixed spacing above table of contents

--- a/css/CMSDocumentationViewer.css
+++ b/css/CMSDocumentationViewer.css
@@ -250,7 +250,7 @@
     
     border: 1px solid #C0C0C2;
     
-    margin: 0 0 21px;
+    margin: 16px 0 21px;
     padding: 6px 6px 6px 10px;
     
     border-radius: 4px;
